RESOLVED FIXED131739
[New Multicolumn] Selection in gaps and blank spots doesn't work.
https://bugs.webkit.org/show_bug.cgi?id=131739
Summary [New Multicolumn] Selection in gaps and blank spots doesn't work.
Dave Hyatt
Reported 2014-04-16 10:13:38 PDT
The selection for multi-column layout breaks down when in the gaps or blank spots of the block. positionForPoint has code to adjust the point to the correct column for the old multi-column code, but it has not been patched yet for the new multi-column code.
Attachments
Patch (11.26 KB, patch)
2014-04-16 16:47 PDT, Dave Hyatt
enrica: review+
Dave Hyatt
Comment 1 2014-04-16 16:47:54 PDT
WebKit Commit Bot
Comment 2 2014-04-16 16:50:46 PDT
Attachment 229498 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/RenderMultiColumnSet.cpp:889: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/rendering/RenderMultiColumnSet.cpp:918: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] ERROR: Source/WebCore/rendering/RenderMultiColumnSet.cpp:954: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 3 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 3 2014-04-16 16:53:29 PDT
Comment on attachment 229498 [details] Patch Looks good to me.
Dave Hyatt
Comment 4 2014-04-16 17:28:08 PDT
Landed in r167404.
Note You need to log in before you can comment on or make changes to this bug.